...
    <string name="inventory_filter_camera">Camera</string>
    <string name="inventory_filter_audio">Audio</string>
    <string name="inventory_filter_tools">Tools</string>
    <string name="inventory_filter_outdoor">Outdoor</string>
    <string name="inventory_filter_power">Power</string>
    <string name="inventory_filter_accessories">Accessories</string>
    <string name="inventory_serialized_title">Serialized Items</string>
    <string name="inventory_stock_title">Stock Items</string>
    <string name="inventory_serialized_count">6</string>
    <string name="inventory_stock_count">4</string>
    <string name="inventory_status_available">Available</string>
    <string name="inventory_status_rented">Rented</string>
    <string name="inventory_status_maintenance">Maintenance</string>
...
