...
    <string name="customers_phone_daniel">(555) 123-4567</string>
    <string name="customers_email_daniel">daniel.green@email.com</string>
    <string name="customers_action_call">Call</string>
    <string name="customers_action_message">Message</string>
    <string name="customers_action_email">Email</string>
    <string name="customers_action_edit">Edit</string>
    <string name="customers_account_overview">Account Overview</string>
    <string name="customers_total_rentals">Total Rentals</string>
    <string name="customers_total_rentals_value">12</string>
    <string name="customers_total_spent">Total Spent</string>
    <string name="customers_total_spent_value">$1,240.00</string>
    <string name="customers_unpaid_balance">Unpaid Balance</string>
    <string name="customers_unpaid_balance_value">$120.00</string>
...
